--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,137 @@
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.order-group h5 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+
+}
+
 .order-item-content-img {
     position: relative;
     width: 120px;
     height: 120px;
-    margin-right: 12px;
-    background-color: #eee;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 50%
+    
+    
+    border-radius: 5px;
+    object-fit:cover;
+    
+}
+
+.order-group {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+}
+
+.order-tracking-process {
+    font-size: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 4px 8px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+
+    margin: 0 10px;
+}
+
+/* #order-list {
+    display: flex;
+    
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    
+    
+} */
+
+.order-item {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 0;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
+    margin: 10px;
+
+    max-width: 350px;
+    min-width: 350px;
+
+    max-height: 420px;
+    min-height: 420px;
+
+    border-radius: 5px;
+}
+
+.order-item .order-base {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+}
+
+.order-item .order-info {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+
+}
+
+.order-item .order-product {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 10px;
+
+
+
+}
+
+.order-item .order-track {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    font-size: 10px;
+
+}
+
+.order-item .order-images {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 10px;
 }
