--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ footer {
     margin: 10px;
 
     max-width: 400px;
-    min-width: 400px;
+    /* min-width: 400px; */
 
     max-height: 300px;
     min-height: 300px;
