--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,57 @@ footer {
     justify-content: center;
     font-size: 10px;
 }
+
+.list {
+    position: relative;
+    
+  }
+  .list h2 {
+    /* color: #fff; */
+    font-weight: 700;
+    letter-spacing: 1px;
+    /* margin-bottom: 10px; */
+  }
+  .list ul {
+    position: relative;
+  }
+  .list ul li {
+    position: relative;
+    left: 0;
+    color: #fce4ec;
+    list-style: none;
+    margin: 4px 0;
+    border-left: 2px solid #35a7ff;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  .list ul li:hover {
+    left: 10px;
+  }
+  .list ul li a {
+    position: relative;
+    padding: 8px;
+    /* padding-left: 12px; */
+    display: inline-block;
+    z-index: 1;
+    transition: 0.5s;
+
+    
+  }
+  .list ul li:hover a {
+    color: #eeeeee;
+    text-decoration: none;
+  }
+  .list ul li:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #35a7ff;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: 0.5s;
+  }
+  .list ul li:hover:before {
+    transform: scaleX(1);
+  }
