--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,64 @@
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .order-group h5 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 100%;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 100%;
 
 }
 
 .order-item-content-img {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    
-    
-    border-radius: 5px;
-    object-fit:fill;
-    
+  position: relative;
+  width: 100px;
+  height: 100px;
+
+
+  border-radius: 5px;
+  object-fit: fill;
+
 }
 
 .order-group {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
 }
 
 .logistic-info--track--WBcFzsd {
-    display: block;
-    font-size: 8px;
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 4px 8px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    
+  display: block;
+  font-size: 8px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 4px 8px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 
-    margin: 0 10px;    
-    /* add scroll */
-    overflow-y: auto;
-    height: 100px;
-    
+
+  margin: 0 10px;
+  /* add scroll */
+  overflow-y: auto;
+  height: 100px;
+
 
 }
 
@@ -77,47 +77,47 @@ footer {
 } */
 
 .order-item {
-    display: flex;
-    flex-direction: column;
-    padding: 12px 0;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 0;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
-    margin: 10px;
+  margin: 10px;
 
-    max-width: 400px;
-    width: 400px;
-    /* min-width: 400px; */
+  max-width: 400px;
+  width: 400px;
+  /* min-width: 400px; */
 
-    max-height: 300px;
-    min-height: 300px;
+  max-height: 350px;
+  min-height: 300px;
 
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .order-item .order-base {
-    display: flex;
-    flex-direction: row;
-    border-bottom: 1px solid #ccc;
-    padding: 10px;
-    height: 150px;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+  height: 150px;
 }
 
 .order-item .order-info {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    font-size: 10px;
-    margin: 0 10px;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  font-size: 10px;
+  margin: 0 10px;
 
 }
 
 .order-item .order-product {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-size: 10px;
-    margin: 0 10px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: 10px;
+  margin: 0 10px;
 
 
 
@@ -125,86 +125,109 @@ footer {
 
 .order-item .order-track {
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    font-size: 8px;
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: center;
+  
+  padding: 5px;
+  font-size: 8px;
 
 }
 
 .order-item .order-images {
-    margin: 10px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    font-size: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.order-resume{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  font-size: 10px;
 }
 
 .list {
-    position: relative;
-    
-  }
-  .list h2 {
-    /* color: #fff; */
-    font-weight: 700;
-    letter-spacing: 1px;
-    /* margin-bottom: 10px; */
-  }
-  .list ul {
-    position: relative;
-  }
-  .list ul li {
-    position: relative;
-    left: 0;
-    color: #fce4ec;
-    list-style: none;
-    margin: 4px 0;
-    border-left: 2px solid #35a7ff;
-    transition: 0.5s;
-    cursor: pointer;
-  }
-  .list ul li:hover {
-    left: 10px;
-  }
-  .list ul li a {
-    position: relative;
-    padding: 8px;
-    /* padding-left: 12px; */
-    display: inline-block;
-    z-index: 1;
-    transition: 0.5s;
+  position: relative;
 
-    
-  }
-  .list ul li:hover a {
-    color: #eeeeee;
-    text-decoration: none;
-  }
-  .list ul li:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #35a7ff;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: 0.5s;
-  }
-  .list ul li:hover:before {
-    transform: scaleX(1);
-  }
+}
 
-  .tracking-line{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-  }
+.list h2 {
+  /* color: #fff; */
+  font-weight: 700;
+  letter-spacing: 1px;
+  /* margin-bottom: 10px; */
+}
+
+.list ul {
+  position: relative;
+}
+
+.list ul li {
+  position: relative;
+  left: 0;
+  color: #fce4ec;
+  list-style: none;
+  margin: 4px 0;
+  border-left: 2px solid #35a7ff;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.list ul li:hover {
+  left: 10px;
+}
+
+.list ul li a {
+  position: relative;
+  padding: 8px;
+  /* padding-left: 12px; */
+  display: inline-block;
+  z-index: 1;
+  transition: 0.5s;
+
+
+}
+
+.list ul li:hover a {
+  color: #eeeeee;
+  text-decoration: none;
+}
+
+.list ul li:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #35a7ff;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: 0.5s;
+}
+
+.list ul li:hover:before {
+  transform: scaleX(1);
+}
+
+.tracking-process {
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  margin: 10px;
+  padding: 10px;
+}
+
+.tracking-line {
+  display: inline;
+  font-size: 8px;
+  margin: 0;
+  border-bottom: #333 1px solid;
+}
