--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+}
 footer {
   background-color: #333;
   color: #fff;
@@ -92,6 +95,7 @@ footer {
   min-height: 300px;
 
   border-radius: 5px;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
 
 .order-item .order-base {
