--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ footer {
   width: 100%;
 }
 
-.order-group h5 {
+.order-group h5{
   font-size: 20px;
   font-weight: bold;
   margin: 10px;
@@ -20,7 +20,13 @@ footer {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   width: 100%;
+  background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+ background-blend-mode: screen;
+  
+}
 
+.order-group a{
+  color: orange;
 }
 
 .order-item-content-img {
@@ -44,6 +50,9 @@ footer {
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* background: #C9CCD3;
+ background-image: linear-gradient(-180deg, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%);
+ background-blend-mode: lighten; */
 
 }
 
